<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="Ferrari">For a Ferrari F430 driving</string>
    <string name="Friday">Fri</string>
    <string name="Fridays">Friday</string>
    <string name="Monday">Mon</string>
    <string name="Mondays">Monday</string>
    <string name="Saturday">Sat</string>
    <string name="Saturdays">Saturday</string>
    <string name="Sunday">Sun</string>
    <string name="Sundays">Sunday</string>
    <string name="Surplus">Remaining:</string>
    <string name="Thursday">Thu</string>
    <string name="Thursdays">Thursday</string>
    <string name="Tuesday">Tue</string>
    <string name="Tuesdays">Tuesday</string>
    <string name="Wednesday">Wed</string>
    <string name="Wednesdays">Wednesday</string>
    <string name="about_cross_training">What is cross-training? Running, other types of exercise, helps strengthen muscles, heart and lung levels of state, can be counted as cross-training. Recommend swimming, cycling. Not recommended confrontational ball games, lead to injury easily.</string>
    <string name="about_you">About you</string>
    <string name="accessibility_preference_summary">To use Fit Health notification service,you need to turn on the system settings Accessibility permissions</string>
    <string name="accessibility_preference_title">Accessibility settings</string>
    <string name="accessibility_prompt_content">Fit Health need to open the system settings accessibility rights to receive notifications, click OK to turn on the power of easy accessibility.</string>
    <string name="accessibility_prompt_title">Fit Health reminder</string>
    <string name="achieve_goal">Finish target</string>
    <string name="achieve_goal1"></string>
    <string name="act_text">The data has been loaded!</string>
    <string name="action_get_data">Running receiving data</string>
    <string name="action_get_persion_config">Synchronize personal information</string>
    <string name="action_menu_share">Share</string>
    <string name="action_notice_title">Activities begin soon!</string>
    <string name="activists">Activist</string>
    <string name="add_device">Please add your device</string>
    <string name="add_device_activity">Add device</string>
    <string name="add_device_onclick">Add a device, click</string>
    <string name="add_gps">GPS sports</string>
    <string name="add_heartrate">Add heartrate</string>
    <string name="add_picture">Add mood</string>
    <string name="add_sport">Add sports</string>
    <string name="add_stepinfo">Add Step function</string>
    <string name="add_weight">Add weight</string>
    <string name="add_word">Add text</string>
    <string name="adding_heart_rate_recording">Adding heart rate recording</string>
    <string name="aerobic_exercise">Aerobic exercise</string>
    <string name="aerobic_str">\taerobics</string>
    <string name="age">Age</string>
    <string name="age_str">Age</string>
    <string name="airplane_747">For Boeing 747 flying</string>
    <string name="alarm_brain">Smart wake</string>
    <string name="alarm_customs">Customize</string>
    <string name="alarm_everyday">Everyday</string>
    <string name="alarm_once">Only rings once</string>
    <string name="alarm_prompt">Allow arousal from light sleep 30 minutes before alarm.</string>
    <string name="alarm_repeat">Repeat</string>
    <string name="alarm_toast">Please use this function after connected devices</string>
    <string name="alarm_workdays">Monday to Friday</string>
    <string name="album_prompt">You have no pictures</string>
    <string name="alert_btn_install">Install</string>
    <string name="alert_btn_no">Do not update</string>
    <string name="alert_btn_no_install">Cancel</string>
    <string name="alert_btn_yes">Update</string>
    <string name="alert_msg">A new version is available, would you like to update?</string>
    <string name="alert_title">Reminder</string>
    <string name="always_forward_preference_summary">Always push</string>
    <string name="always_forward_preference_title">Push message to bluetooth device</string>
    <string name="android_version">Android Version：</string>
    <string name="app_name">Fit Health</string>
    <string name="application_brief">Application brief</string>
    <string name="asked_questions">Frequently asked questions</string>
    <string name="back_to_today">Back to today</string>
    <string name="batterylow">Low battery</string>
    <string name="beer">Jug of beer</string>
    <string name="best_value">Personal bests</string>
    <string name="beyond_marathon">Beyond marathon</string>
    <string name="bind_venus_devices">Devices</string>
    <string name="bind_venus_failed">Connected fail</string>
    <string name="bind_venus_help">Cannot connect the device?</string>
    <string name="bind_venus_rescan">Search again</string>
    <string name="bind_venus_scan">Searching</string>
    <string name="bind_venus_stopscan">Stop searching</string>
    <string name="bind_venus_subtitle">Please place the device near the mobile phone</string>
    <string name="bind_venus_title">Search device</string>
    <string name="bluetooth_headset">Bluetooth headset</string>
    <string name="bluetooth_headset_tv1">Lightweight wireless, fun in life</string>
    <string name="bluetooth_headset_tv2">The most intelligent lightweight Bluetooth headset sports, so you get rid of the fetters of cable, outside the hustle and bustle, the freedom to listen to music, sports fun in life.</string>
    <string name="bluetooth_headset_tv3">Comfort and convenience</string>
    <string name="bluetooth_headset_tv4">Ergonomic design, with lightweight neckband memory, wear fit, firm and comfortable; shaft folding, retractable, in one hand, into the bag accompanying.</string>
    <string name="bluetooth_tv1">Sports allows you to enjoy music everywhere</string>
    <string name="bluetooth_tv2">The first Bluetooth sports headset with APP function,revolutionizes conventional MP3 design to redefine your lifestyle and compliment your fashion sense.</string>
    <string name="bluetooth_tv3">Bluetooth calling</string>
    <string name="bluetooth_tv4">The driving call helper auto syncs contacts, displays caller name, quick accepts calls for crystal clear conversation, and activates smart call recording on the fly.</string>
    <string name="bluetooth_tv5">Sports enjoyment</string>
    <string name="discover_eamey">EAMEY P1</string>
    <string name="discover_eamey_text">business sport bluetooth headset</string>
    <string name="discover_more_text">More equipment is on its way...</string>
    <string name="discover_qume">EAMEY P3</string>
    <string name="discover_qume_text">portable sport bluetooth headset</string>
    <string name="discover_small_title">Smart devices</string>
    <string name="discover_watch">TJ01</string>
    <string name="discover_watch_text">intelligent bluetooth watch</string>
    <string name="finder">Find</string>
    <string name="gps_timer">Time</string>
    <string name="help_subtext1">Shorter distances improve search to enhance Bluetooth and Smartphone connection</string>
    <string name="help_subtext2">Low battery may be the cause if device cannot be found while in close proximity of Smartphone. Please charge and try again.</string>
    <string name="help_subtext3">If charged device is in close proximity of Smartphone but still cannot be found, restart mobile Bluetooth and try again later.</string>
    <string name="help_subtext4">If your device is tethered to another Smartphone and that phone is in close proximity, deactivate mobile Bluetooth for said phone and start a new search with the desired phone.</string>
    <string name="help_subtitle1">Whether near mobile phone?</string>
    <string name="help_subtitle2">Is the power consummed?</string>
    <string name="help_subtitle3">Try to restart Bluetooth?</string>
    <string name="help_subtitle4">Has been bound with other phones?</string>
    <string name="help_title">Help</string>
    <string name="homepage">Home</string>
    <string name="mine">Mine</string>
    <string name="my_ranking">Rank</string>
    <string name="questions_tv1">Click device synchronization unresponsive</string>
    <string name="questions_tv10">Fit Health mobile terminal enters the main interface, enter me, click on the Bluetooth name, manually connect again.</string>
    <string name="questions_tv2">Is about the security settings and permissions for the mobile phone side of the phone. View mobile terminal applications, Fit Health related settings, on the status bar, notification bar, you need to open windows and other suspended, rights management needs to trust the program. If you are still not open after synchronization, disconnect reconnect. For example: Millet 3 phone after installation Fit Health, want to end the phone Go to Settings - Applications -Fit Health, click enter, the custom display notifications in the notification bar notification and display the status bar notification to open, in the bottom of my rights management trust the program opens. OPPO phone comes with the Security Center, to enter the security center - pure background will Fit Health added.</string>
    <string name="questions_tv5">Play music without sound mobile terminal</string>
    <string name="questions_tv6">Keep the phone about 15 seconds pause music ends, continue to play, if still no sound, disconnect the Bluetooth connection, reconnect once.</string>
    <string name="questions_tv7">After connecting the phone Bluetooth devices, settings menu, the Bluetooth device name is displayed below the Connected (no media) or connected (no phone)</string>
    <string name="questions_tv8">Disconnect the Bluetooth connection, reconnect once.</string>
    <string name="questions_tv9">Bluetooth device with your phone is connected, but the connection is not on Fit Health</string>
    <string name="run_unit">min</string>
    <string name="set_alarm">Set the alarm clock</string>
    <string name="sports_tv_1">Motion</string>
    <string name="sports_tv_2">Consume</string>
    <string name="steps_largen_anwser">When open the phone down, bluetooth and GPS steps at the same time, steps data will accumulate computation. to ensure consistent,please make sure that only use one the way to step down At some point.</string>
    <string name="steps_largen_question">Mobile phone display steps data too big?</string>
    <string name="unit_calories">kCal</string>
</resources>