<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="#2acacc" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:background="#2acacc" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x2a01">
        <ImageView android:id="@+id/bind_help_back" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:src="@drawable/button_selector" android:layout_alignParentLeft="true" android:layout_centerInParent="true" android:onClick="onClick" />
        <TextView android:textSize="20sp" android:textColor="#f1ffff" android:id="@+id/bind_help_title" android:paddingLeft="40dp" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/help_title" android:layout_alignParentLeft="true" android:layout_centerInParent="true" android:onClick="onClick" />
    </RelativeLayout>
    <TextView android:textSize="18sp" android:textColor="#f1ffff" android:id="@+id/help_subtitle1" android:paddingLeft="40dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40dp" android:text="@string/help_subtitle1" />
    <TextView android:textSize="14sp" android:textColor="#f1ffff" android:id="@+id/help_subtext1" android:paddingLeft="40dp" android:paddingRight="40dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dp" android:text="@string/help_subtext1" />
    <TextView android:textSize="18sp" android:textColor="#f1ffff" android:id="@+id/help_subtitle2" android:paddingLeft="40dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/help_subtitle2" />
    <TextView android:textSize="14sp" android:textColor="#f1ffff" android:id="@+id/help_subtext2" android:paddingLeft="40dp" android:paddingRight="40dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dp" android:text="@string/help_subtext2" />
    <TextView android:textSize="18sp" android:textColor="#f1ffff" android:id="@+id/help_subtitle3" android:paddingLeft="40dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/help_subtitle3" />
    <TextView android:textSize="14sp" android:textColor="#f1ffff" android:id="@+id/help_subtext3" android:paddingLeft="40dp" android:paddingRight="40dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dp" android:text="@string/help_subtext3" />
    <TextView android:textSize="18sp" android:textColor="#f1ffff" android:id="@+id/help_subtitle4" android:paddingLeft="40dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/help_subtitle4" />
    <TextView android:textSize="14sp" android:textColor="#f1ffff" android:id="@+id/help_subtext4" android:paddingLeft="40dp" android:paddingRight="40dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dp" android:text="@string/help_subtext4" />
</LinearLayout>
