<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@+id/back" android:background="@color/discover_title_color" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x3001" android:onClick="onClick">
        <ImageView android:id="@+id/back_m" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:src="@drawable/actionbar_back" android:layout_centerVertical="true" />
        <TextView android:textSize="21dp" android:textColor="@color/white" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="1dp" android:text="@string/set_alarm" android:layout_toRightOf="@+id/back_m" android:layout_centerVertical="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:background="#f4f3f3" android:layout_width="match_parent" android:layout_height="match_parent">
        <TextView android:textSize="14sp" android:textColor="#afafaf" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:paddingLeft="@dimen/alarm_set_paddingLeft" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x2301" android:text="@string/alarm_brain" />
        <RelativeLayout android:background="@color/white" android:paddingLeft="@dimen/alarm_set_paddingLeft" android:paddingRight="@dimen/alarm_set_paddingLeft" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x4b01">
            <Button android:id="@+id/button_alarm_switch" android:background="@drawable/alarm_button_openon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:onClick="onClick" />
            <TextView android:textSize="15sp" android:textColor="#333333" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginRight="60dp" android:text="@string/alarm_prompt" android:layout_toLeftOf="@+id/button_alarm_switch" android:layout_centerVertical="true" />
        </RelativeLayout>
        <TextView android:textSize="14sp" android:textColor="#afafaf" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:paddingLeft="@dimen/alarm_set_paddingLeft" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x2301" android:text="@string/alarm_repeat" />
        <LinearLayout android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:orientation="horizontal" android:background="@color/white" android:padding="8dp" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7801">
            <Button android:textSize="14sp" android:textColor="@color/white" android:id="@+id/alarm_once" android:background="@drawable/alarm_button_selected" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="UNKNOWN_DATA_0x3201" android:layout_margin="7dp" android:text="@string/alarm_once" android:layout_weight="1.0" />
            <Button android:textSize="14sp" android:textColor="#c7c7c7" android:id="@+id/alarm_everyday" android:background="@drawable/alarm_button_unselected" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="UNKNOWN_DATA_0x3201" android:layout_margin="7dp" android:text="@string/alarm_everyday" android:layout_weight="1.0" />
            <Button android:textSize="14sp" android:textColor="#c7c7c7" android:id="@+id/alarm_workdays" android:background="@drawable/alarm_button_unselected" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="UNKNOWN_DATA_0x3201" android:layout_margin="7dp" android:text="@string/alarm_workdays" android:layout_weight="1.0" />
            <Button android:textSize="14sp" android:textColor="#c7c7c7" android:id="@+id/alarm_cumtoms" android:background="@drawable/alarm_button_unselected" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="UNKNOWN_DATA_0x3201" android:layout_margin="7dp" android:text="@string/alarm_customs" android:layout_weight="1.0" />
        </LinearLayout>
        <TextView android:textSize="14sp" android:textColor="#afafaf" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:paddingLeft="@dimen/alarm_set_paddingLeft" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x2301" android:text="@string/gps_timer" />
        <com.droi.library.pickerviews.picker.TimePickerView android:id="@id/time_picker_view" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" />
    </LinearLayout>
</LinearLayout>
