<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" android:paddingLeft="5dp" android:paddingRight="5dp" android:layout_width="match_parent" android:layout_height="wrap_content">
    <RelativeLayout android:id="@+id/sports_lay" android:background="@drawable/listitem_sports_bg" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <TextView android:textSize="10dp" android:textColor="#b5b5b5" android:id="@id/time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:layout_centerHorizontal="true" />
        <LinearLayout android:orientation="horizontal" android:paddingBottom="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@id/time">
            <ImageView android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@+id/item_run_logo" android:layout_width="UNKNOWN_DATA_0x1f01" android:layout_height="UNKNOWN_DATA_0x1f01" android:layout_marginLeft="20dp" android:src="@drawable/icon_step" android:contentDescription="@string/app_name" />
            <TextView android:textSize="13dp" android:textColor="#7a7a7a" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:text="@string/sports_tv_1" />
            <TextView android:textSize="28dp" android:textColor="#62aa43" android:id="@+id/duration" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
            <TextView android:textSize="13dp" android:textColor="#7a7a7a" android:id="@+id/run_unit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/run_unit" android:singleLine="true" />
            <TextView android:textSize="13dp" android:textColor="#7a7a7a" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:text="@string/sports_tv_2" />
            <TextView android:textSize="28dp" android:textColor="#62aa43" android:id="@+id/calories" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
            <TextView android:textSize="13dp" android:textColor="#7a7a7a" android:id="@+id/unit_calories" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/unit_calories" android:singleLine="true" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>
