<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="#f4f3f3" android:layout_width="match_parent" android:layout_height="match_parent"
    <LinearLayout android:background="#f4f3f3" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x1f01">
        <TextView android:textSize="15dp" android:textColor="#5e5b5a" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginTop="8dp" android:text="@string/discover_small_title" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <RelativeLayout android:id="@+id/facility_qume" android:background="@drawable/discover_qume" android:clickable="true" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="wrap_content" android:layout_weight="1.0" android:onClick="onClick">
            <TextView android:textSize="@dimen/text_20" android:textColor="@color/discover_title_color" android:id="@+id/facility_one_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginTop="10dp" android:text="@string/discover_qume" android:layout_alignParentLeft="true" />
            <TextView android:textSize="12sp" android:textColor="#868483" android:id="@+id/facility_one_text2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:text="@string/discover_qume_text" android:layout_below="@+id/facility_one_text" android:layout_alignParentLeft="true" />
        </RelativeLayout>
        <ImageView android:background="#e5e5e5" android:layout_width="UNKNOWN_DATA_0x101" android:layout_height="match_parent" />
        <RelativeLayout android:id="@+id/facility_eamey" android:background="@drawable/discover_eamey" android:clickable="true" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="wrap_content" android:layout_weight="1.0" android:onClick="onClick">
            <TextView android:textSize="@dimen/text_20" android:textColor="@color/discover_title_color" android:id="@+id/facility_two_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginTop="10dp" android:text="@string/discover_eamey" android:layout_alignParentLeft="true" />
            <TextView android:textSize="12sp" android:textColor="#868483" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:text="@string/discover_eamey_text" android:layout_below="@+id/facility_two_text" android:layout_alignParentLeft="true" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <RelativeLayout android:id="@+id/facility_watch" android:background="@drawable/discover_watch" android:clickable="true" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="wrap_content" android:layout_weight="1.0" android:onClick="onClick">
            <TextView android:textSize="@dimen/text_20" android:textColor="@color/discover_title_color" android:id="@+id/facility_watch_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginTop="10dp" android:text="@string/discover_watch" android:layout_alignParentLeft="true" />
            <TextView android:textSize="12sp" android:textColor="#868483" android:id="@+id/facility_watch_text2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:text="@string/discover_watch_text" android:layout_below="@+id/facility_watch_text" android:layout_alignParentLeft="true" />
            <ImageView android:background="#e5e5e5" android:layout_width="UNKNOWN_DATA_0x101" android:layout_height="match_parent" />
        </RelativeLayout>
        <RelativeLayout android:id="@+id/facility_more" android:background="@drawable/discover_more" android:clickable="true" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="wrap_content" android:layout_weight="1.0" android:onClick="onClick">
            <TextView android:textSize="15dp" android:textColor="@color/discover_title_color" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/discover_more_text" android:layout_centerInParent="true" android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
